# remote-repo

./: CMakeLists.txt  LLMwiki.md  demo01.txt  demo03.cpp  new_testcase.md  reeadme.md
executor-bootstrap/: readme.md
executor-bootstrap/src/: CMakeLists.txt  executor_status.cpp  main.c  robot_executor.cpp
executor-bootstrap/test/: CMakeLists.txt  robot_executor_test.cc
include/: ITask.h  Scheduler.h  SimpleTask.h  TaskObserver.h
linux命令隐式能力/: 隐式命令.md
longtaskforagent/: .gitignore  README.md
longtaskforagent/.claude-plugin/: marketplace.json  plugin.json
longtaskforagent/agents/: sdd-build.md  sdd-reviewer.md
longtaskforagent/commands/: sdd-dev.md  sdd-req.md  sdd-review.md  sdd.md
longtaskforagent/docs/: opencode-adaptation-guide.md
longtaskforagent/plugins/: long-task.js
longtaskforagent/tests/: eval.json
opencode/笔记/: gitmm.md  opencode.md
project_string/StringUtils_Improved/: README.md  string_utils.cpp  string_utils.h
project_string/StringUtils_Practice/: README.md  string_utils.cpp
project_string/StringUtils_Teaching/: CMakeLists.txt  README.md  string_utils.h  string_utils_test.cpp
safeShell/2.0/: safeshell.cpp  safeshell.h
safeShell/commandMode-MultipleFile/: main.cpp
safeShell/sigleFile/: SafeShell.cpp  SafeShell.h  SafeShell2.cpp  main.cpp  test_script.sh
skill-creator/: SKILL.md
skill-creator/agents/: analyzer.md  comparator.md  grader.md
skill-creator/docs/: OpenCode使用指南.md
skill-creator/scripts/: utils.py  (+7 more)
src/: Scheduler.cpp
test_code/: tlv.cpp
tests/: SchedulerTest.cpp
tsan/: thread_sanitizer（tsan）使用与原理说明.md
(+166 files in other folders)
